Current Bugs
Icons:
- I would prefer to use the font-awesome icon set instead of the
foundation one. Especially because they have different types of each
icon (light & dark) and I think they are prettier designed.

Menu:
- Burger-icon on responsive devices should be $secondary-color
- logo should not be truncated
- bg color of links should be $secondary-color and active state primary

landingpage:
include the icons on top of the 4 features.

profile:
- the colored rating-points should also be visibly on small screens
- include the social icons
- remove the big spacing at the end of the comments
- there is a small margin to the right on mobile devices that makes in
horizontal-scrollable.

compare:
- ratings / References on opened items (Bruce lee is collapseable)
- include icons

backend:
the sidebar should be always opened (except for mobile screens). Maybe
the currently used off-canvas element was not the right chose for the
left-sidebar (I think for the right side it is ok for a tiny
„notification-are“ or something like this). Maybe compare it with the
left-sidebar.

--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -26,7 +26,6 @@ $p_color:#272727;
 $primary-color:#32aebd;
 $secondary-color:#293c4e;
 
-
 /* -----------------------------------------
    Shared Properties
 ----------------------------------------- */
@@ -56,7 +55,8 @@ $em-base : 17 !default;
 
 /*Global Variables*/
 $font-family : Lato;
-$font-weight : 300;
+$freestyle-font: 'Shadows Into Light Two';
+$font-weight : 400;
 
 html, body {
 	background: url("../img/bg_pattern.png") repeat;
@@ -70,6 +70,18 @@ h1, h2, h3, h4, h5, h6, p, label,a,span {
 	color: $darkgrey;
 	font-family: $font-family;
 	font-weight: $font-weight;
+}
+
+h1, h2 {
+	font-weight: 300;
+}
+
+.freestyle {
+	color:$orange;
+	font-weight:200;
+	font-family: $freestyle-font;
+	letter-spacing: 2px;
+	font-size: 1.5em;
 }
 
 p {
@@ -106,7 +118,7 @@ a:hover {
 }
 
 .dark-bg {
-	background-color: $secondary-color;
+	background: url("../img/bg_slider.png") repeat;
 	color: $bg-color;
 }
 
@@ -277,11 +289,21 @@ input[type=password]:focus,
 }
 
 /* -----------------------------------------
+   Table Styles
+----------------------------------------- */
+
+th {
+	background-color: $secondary-color;
+	color: $bg-color;
+	text-transform: uppercase;
+}
+
+/* -----------------------------------------
    Frontpage Styles
 ----------------------------------------- */
 
 #headline {
-	margin-top: 50px;
+	margin-top: 80px;
 	font-size: 2.3em;
 	text-transform: uppercase;
 	font-weight: 300;
@@ -298,7 +320,6 @@ input[type=password]:focus,
 } 
 
 .main-slider {
-	background-color:$secondary-color;
 	border-top:5px solid $primary-color;
 	border-bottom:5px solid $primary-color;
 	padding-top:20px;
@@ -574,6 +595,11 @@ aside {
 	}
 }
 
+.main-section {
+	padding: 30px;
+	max-width: 100%;
+}
+
 /* -----------------------------------------
    Briefing Styles
 ----------------------------------------- */
@@ -637,6 +663,7 @@ aside {
 		text-align: justify;
 		font-style: italic;
 		padding: 0px 30px -10px 25px;
+		font-weight: 300;
 	}
 
 	img {
@@ -682,6 +709,7 @@ aside {
 	#categories {
 		position: absolute;
 		left: 5px;
+		color: $darkgrey;
 	}
 
 	#points {
@@ -777,6 +805,7 @@ aside {
 	.comment {
 		font-style: italic;
 		padding: 10px 20px 0px 20px;
+		color: $darkgrey;
 	}
 
 	.comment:before, .comment:after {
